Fixed smart-details alignment

--- a/sass/components/smart/details/_smart-details.scss
+++ b/sass/components/smart/details/_smart-details.scss
@@ -11,6 +11,7 @@
   background: $theme-generic;
 
   display: flex;
+  justify-content: space-between;
 
   @media screen and (max-width: $break-med) {
     flex-direction: column;
